--- a/publications.html
+++ b/publications.html
@@ -88,37 +88,37 @@
 		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
             	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
                        </p></li>	
-                        li><p>
+                        <li><p>
    		<b>Guangwei Gao</b>, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
 		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
 		<i>Neural Computing and Applications (<b>NCAA</b>)</i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
 		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
                         </p></li>
-		        li><p>
+		        <li><p>
    		<b>Guangwei Gao</b>, Yannan Wang, Pu Huang, Heyou Chang, Huimin Lu, Dong Yue.<br>
 		Locality-constrained feature space learning for cross-resolution sketch-photo face recognition.<br>
 		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14903-14917, 2020. (JCR Q1)<br>
 		[ <a href="https://link.springer.com/article/10.1007/s11042-019-08488-y" target="_blank">paper</a> ]
                         </p></li>
-	                li><p>
+	                <li><p>
    		Jiaming Chen, Meng Yang, <b>Guangwei Gao</b>.<br>
 		Semi-supervised Dual-Branch Network for image classification.<br>
 		<i>Knowledge-Based Systems (<b>KBS</b>)</i>, 197: 105837 (2020). (JCR Q1) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120302100" target="_blank">paper</a> ]
                         </p></li>
-	                li><p>
+	                <li><p>
    		Yan Cui, Rui Zhang, Huacheng Gao, Yuanyuan Lu, Yinqiu Liu, <b>Guangwei Gao</b>.<br>
 		A novel biclustering of gene expression data based on hybrid BAFS-BSA algorithm.<br>
 		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14811-14824, 2020. (JCR Q1) <br>
 		[ <a href="https://link.springer.com/article/10.1007/s11042-019-7656-7" target="_blank">paper</a> ]
                         </p></li>
-	                li><p>
+	                <li><p>
    		Songsong Wu, <b>Guangwei Gao</b>, Zuoyong Li, Fei Wu, Xiao-Yuan Jing.<br>
 		Unsupervised visual domain adaptation via discriminative dictionary evolution.<br>
 		<i>Pattern Analysis and Applications (<b>PAA</b>)</i>, 23(4): 1665-1675, 2020. (JCR Q2) <br>
 		[ <a href="https://link.springer.com/article/10.1007/s10044-020-00881-w" target="_blank">paper</a> ]
                         </p></li>
-	                 li><p>
+	                <li><p>
    		Meng Yang, Wei Wen, Xing Wang, Linlin Shen, <b>Guangwei Gao</b>.<br>
 		Adaptive Convolution Local and Global Learning for Class-Level Joint Representation of Facial Recognition With a Single Sample Per Data Subject.<br>
 		<i>IEEE Transactions on Information Forensics and Security (<b>PATIFSA</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
@@ -139,66 +139,47 @@
 		[ <a href="https://ieeexplore.ieee.org/document/8693716" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               <b>Guangwei Gao</b>, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
-	       Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression.<br>
-	       <i>ACM Transactions on Internet Technology (<b>TOIT</b>)</i>, accepted, 2020. (JCR Q1, CCF B) <br>
-	       [ paper] 		  
+               Yun-Hao Yuan, Chao Zhang, Yun Li, Jipeng Qiang, Bin Li, Guangwei Gao, Xiaoning Song, Huimin Lu.<br>
+	       Fractional Sparse Representation Based Classification and Multi-view Extension for Face Recognition.<br>
+	       <i>Australian Journal of Intelligent Information Processing Systems (<b>AJIIPS</b>)</i>, 15(3): 76-81, 2019. <br>
+	       [ <a href="http://ajiips.com.au/papers/V15.3/v15n3_80-85.pdf" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		<b>Guangwei Gao</b>, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
-		Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution.<br>
-		<i>Pattern Recognition (<b>PR</b>)</i>, https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
-      		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
+		Yun-Hao Yuan, Jie Yang, Yun Li, Jipeng Qiang, Bin Li, Xiaobo Shen, Jianping Gou, Guangwei Gao.<br> 
+		 Face Hallucination Using Locality Preserving Canonical Correlation Analysis.<br>
+		<i>Australian Journal of Intelligent Information Processing Systems (<b>AJIIPS</b>)</i>, 15(3): 82-90, 2019.<br>
+      		[ <a href="http://ajiips.com.au/papers/V15.3/v15n3_86-94.pdf" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
-		Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression.<br>
-		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36, 2020. (JCR Q1, CCF B)<br>
-                [ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
+                Heyou Chang, Fanlong Zhang, Guangwei Gao, Hao Zheng, Yang Chen.<br>
+		Structure-constrained discriminative dictionary learning based on Schatten p-norm for face recognition.<br>
+		<i>Digital Signal Processing (<b>DSP</b>)</i>, 95, 2019. (JCR Q1)<br>
+                [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1051200419301125" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
-		Multi-scale patch based representation feature learning for low-resolution face recognition.<br> 
-		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
-            	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
+                Pu Huang, Tao Li, Guangwei Gao, Geng Yang.<br>
+		Feature extraction based on graph discriminant embedding and its applications to face recognition.<br> 
+		<i>oft Computing</i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
+            	[ <a href="https://link.springer.com/article/10.1007/s00500-018-3340-5" target="_blank">paper</a> ]           			
                        </p></li>	
-                        li><p>
-   		<b>Guangwei Gao</b>, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
-		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
-		<i>Neural Computing and Applications (<b>NCAA</b>)</i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
-		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
+                        <li><p>
+   		Quan Zhou, Wenbin Yang, Guangwei Gao, Weihua Ou, Huimin Lu, Jie Chen, Longin Jan Latecki.<br>
+		Multi-scale deep context convolutional neural networks for semantic segmentation.<br>
+		<i>World Wide Web (<b>WWW</b>)</i>, 22(2): 555-570, 2019. (JCR Q1, CCF B)<br>
+		[ <a href="https://link.springer.com/article/10.1007/s11280-018-0556-3" target="_blank">paper</a> ]
                         </p></li>
-		        li><p>
-   		<b>Guangwei Gao</b>, Yannan Wang, Pu Huang, Heyou Chang, Huimin Lu, Dong Yue.<br>
-		Locality-constrained feature space learning for cross-resolution sketch-photo face recognition.<br>
-		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14903-14917, 2020. (JCR Q1)<br>
-		[ <a href="https://link.springer.com/article/10.1007/s11042-019-08488-y" target="_blank">paper</a> ]
+		        <li><p>
+   		Yu Wang, Quan Zhou, Jia Liu, Jian Xiong, Guangwei Gao, Xiaofu Wu, Longin Jan Latecki.<br>
+		Lednet: A Lightweight Encoder-Decoder Network for Real-Time Semantic Segmentation.<br>
+		<i>International Conference on Image Processing (<b>ICIP</b>)</i>, pp. 1860-1864, 2016. (CCF C) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8803154" target="_blank">paper</a> ]
                         </p></li>
-	                li><p>
-   		Jiaming Chen, Meng Yang, <b>Guangwei Gao</b>.<br>
-		Semi-supervised Dual-Branch Network for image classification.<br>
-		<i>Knowledge-Based Systems (<b>KBS</b>)</i>, 197: 105837 (2020). (JCR Q1) <br>
+	                <li><p>
+   		Yun-Hao Yuan, Hui Zhang, Yun Li, Jipeng Qiang, Jianping Gou, Guangwei Gao, Bin Li.<br>
+		Fuzzy Bilinear Latent Canonical Correlation Projection for Feature Learning.<br>
+		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 670-678, 2019. (CCF C) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120302100" target="_blank">paper</a> ]
-                        </p></li>
-	                li><p>
-   		Yan Cui, Rui Zhang, Huacheng Gao, Yuanyuan Lu, Yinqiu Liu, <b>Guangwei Gao</b>.<br>
-		A novel biclustering of gene expression data based on hybrid BAFS-BSA algorithm.<br>
-		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14811-14824, 2020. (JCR Q1) <br>
-		[ <a href="https://link.springer.com/article/10.1007/s11042-019-7656-7" target="_blank">paper</a> ]
-                        </p></li>
-	                li><p>
-   		Songsong Wu, <b>Guangwei Gao</b>, Zuoyong Li, Fei Wu, Xiao-Yuan Jing.<br>
-		Unsupervised visual domain adaptation via discriminative dictionary evolution.<br>
-		<i>Pattern Analysis and Applications (<b>PAA</b>)</i>, 23(4): 1665-1675, 2020. (JCR Q2) <br>
-		[ <a href="https://link.springer.com/article/10.1007/s10044-020-00881-w" target="_blank">paper</a> ]
-                        </p></li>
-	                 li><p>
-   		Meng Yang, Wei Wen, Xing Wang, Linlin Shen, <b>Guangwei Gao</b>.<br>
-		Adaptive Convolution Local and Global Learning for Class-Level Joint Representation of Facial Recognition With a Single Sample Per Data Subject.<br>
-		<i>IEEE Transactions on Information Forensics and Security (<b>PATIFSA</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
-		[ <a href="https://ieeexplore.ieee.org/document/8957296" target="_blank">paper</a> ]
-                        </p></li>
-			
+                        </p></li>	
         </ol>
     </div>
 
