--- a/publications.html
+++ b/publications.html
@@ -133,49 +133,49 @@
         <h2><hr><a name="2019"></a>2019</h2>
         <ol>
 	               <li><p>
-                Changan Yuan, Xiao Qin, Lechan Yang, Guangwei Gao, Song Deng.<br> 
+                Changan Yuan, Xiao Qin, Lechan Yang, <b>Guangwei Gao</b>, Song Deng.<br> 
 		 A Novel Function Mining Algorithm Based on Attribute Reduction and Improved Gene Expression Programming.<br>
 		<i><b>IEEE Access</b></i>, 7: 53365-53376, 2019. (JCR Q1) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8693716" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Yun-Hao Yuan, Chao Zhang, Yun Li, Jipeng Qiang, Bin Li, Guangwei Gao, Xiaoning Song, Huimin Lu.<br>
+               Yun-Hao Yuan, Chao Zhang, Yun Li, Jipeng Qiang, Bin Li, <b>Guangwei Gao</b>, Xiaoning Song, Huimin Lu.<br>
 	       Fractional Sparse Representation Based Classification and Multi-view Extension for Face Recognition.<br>
 	       <i>Australian Journal of Intelligent Information Processing Systems (<b>AJIIPS</b>)</i>, 15(3): 76-81, 2019. <br>
 	       [ <a href="http://ajiips.com.au/papers/V15.3/v15n3_80-85.pdf" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		Yun-Hao Yuan, Jie Yang, Yun Li, Jipeng Qiang, Bin Li, Xiaobo Shen, Jianping Gou, Guangwei Gao.<br> 
+		Yun-Hao Yuan, Jie Yang, Yun Li, Jipeng Qiang, Bin Li, Xiaobo Shen, Jianping Gou, <b>Guangwei Gao</b>.<br> 
 		 Face Hallucination Using Locality Preserving Canonical Correlation Analysis.<br>
 		<i>Australian Journal of Intelligent Information Processing Systems (<b>AJIIPS</b>)</i>, 15(3): 82-90, 2019.<br>
       		[ <a href="http://ajiips.com.au/papers/V15.3/v15n3_86-94.pdf" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Heyou Chang, Fanlong Zhang, Guangwei Gao, Hao Zheng, Yang Chen.<br>
+                Heyou Chang, Fanlong Zhang, <b>Guangwei Gao</b>, Hao Zheng, Yang Chen.<br>
 		Structure-constrained discriminative dictionary learning based on Schatten p-norm for face recognition.<br>
 		<i>Digital Signal Processing (<b>DSP</b>)</i>, 95, 2019. (JCR Q1)<br>
                 [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1051200419301125" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Pu Huang, Tao Li, Guangwei Gao, Geng Yang.<br>
+                Pu Huang, Tao Li, <b>Guangwei Gao</b>, Geng Yang.<br>
 		Feature extraction based on graph discriminant embedding and its applications to face recognition.<br> 
 		<i>oft Computing</i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
             	[ <a href="https://link.springer.com/article/10.1007/s00500-018-3340-5" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
-   		Quan Zhou, Wenbin Yang, Guangwei Gao, Weihua Ou, Huimin Lu, Jie Chen, Longin Jan Latecki.<br>
+   		Quan Zhou, Wenbin Yang, <b>Guangwei Gao</b>, Weihua Ou, Huimin Lu, Jie Chen, Longin Jan Latecki.<br>
 		Multi-scale deep context convolutional neural networks for semantic segmentation.<br>
 		<i>World Wide Web (<b>WWW</b>)</i>, 22(2): 555-570, 2019. (JCR Q1, CCF B)<br>
 		[ <a href="https://link.springer.com/article/10.1007/s11280-018-0556-3" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
-   		Yu Wang, Quan Zhou, Jia Liu, Jian Xiong, Guangwei Gao, Xiaofu Wu, Longin Jan Latecki.<br>
+   		Yu Wang, Quan Zhou, Jia Liu, Jian Xiong, <b>Guangwei Gao</b>, Xiaofu Wu, Longin Jan Latecki.<br>
 		Lednet: A Lightweight Encoder-Decoder Network for Real-Time Semantic Segmentation.<br>
 		<i>International Conference on Image Processing (<b>ICIP</b>)</i>, pp. 1860-1864, 2016. (CCF C) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8803154" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
-   		Yun-Hao Yuan, Hui Zhang, Yun Li, Jipeng Qiang, Jianping Gou, Guangwei Gao, Bin Li.<br>
+   		Yun-Hao Yuan, Hui Zhang, Yun Li, Jipeng Qiang, Jianping Gou, <b>Guangwei Gao</b>, Bin Li.<br>
 		Fuzzy Bilinear Latent Canonical Correlation Projection for Feature Learning.<br>
 		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 670-678, 2019. (CCF C) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120302100" target="_blank">paper</a> ]
@@ -183,7 +183,70 @@
         </ol>
     </div>
 
-
+	
+	
+       <div>
+        <h2><hr><a name="2018"></a>2018</h2>
+        <ol>
+	               <li><p>
+                Guangwei Gao, Zangyi Hu, Pu Huang, Meng Yang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
+		Robust low-resolution face recognition via low-rank representation and locality-constrained regression.<br>
+		<i>Computers & Electrical Engineering (<b>CAEE</b>)</i>, 70: 968-977, 2018. (JCR Q1) <br>
+		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045790617323716" target="_blank">paper</a> ]           			
+                       </p></li>
+		       <li><p>
+               Pu Huang, Tao Li, Guangwei Gao, Yazhou Yao, Geng Yang.<br>
+	       Collaborative representation based local discriminant projection for feature extraction.<br>
+	       <i>Digital Signal Processing (<b>DSP</b>)</i>, 76: 84-93, 2018. (JCR Q1) <br>
+	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1051200418300538" target="_blank">paper</a> ]  		  
+                       </p></li>	
+			<li><p>
+		Pu Huang, Tao Li, Zhenqiu Shu, Guangwei Gao, Geng Yang, Chengshan Qian.<br> 
+		  Locality-regularized linear regression discriminant analysis for feature extraction.<br>
+		<i>Information Sciences (<b>IS</b>)</i>, 429: 164-176, 2018. (JCR Q1, CCF B) <br>
+      		[ <a href="https://www.sciencedirect.com/science/article/pii/S0020025516308106" target="_blank">paper</a> ]           			
+                        </p></li>	
+	  		<li><p>
+                Fei Wu, Xiao-Yuan Jing, Songsong Wu, Guangwei Gao, Qi Ge, Ruchuan Wang.<br>
+		"Like charges repulsion and opposite charges attraction" law based multilinear subspace analysis for face recognition.<br>
+		<i>Knowledge Based Systems (<b>KBS</b>)</i>, 149: 76-87, 2018. (JCR Q1)<br>
+                [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S095070511830090X" target="_blank">paper</a> ]           			
+                        </p></li>	
+			<li><p>
+                Xiaoke Zhu, Xiao-Yuan Jing, Liang Yang, Xinge You, Dan Chen, Guangwei Gao, Yunhong Wang.<br>
+		Semi-Supervised Cross-View Projection-Based Dictionary Learning for Video-Based Person Re-Identification.<br> 
+		<iIEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>)</i>, 28(10): 2599-2611, 2018. (JCR Q1, CCF B) <br>
+            	[ <a href="https://ieeexplore.ieee.org/document/7954687" target="_blank">paper</a> ]           			
+                       </p></li>	
+                        <li><p>
+   		Zhiqiang Lu, Songsong Wu, Yurong Liu, Guangwei Gao, Fei Wu.<br>
+		Diverse and Common Multi-View Subspace Clustering.<br>
+		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b)></i>, pp. 878-882, 2018. <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8691368" target="_blank">paper</a> ]
+                        </p></li>
+		        <li><p>
+   		Zangyi Hu, Guangwei Gao* , Hao Gao, Songsong Wu, Dong Zhu, Dong Yue.<br>
+		Robust Face Recognition Via Dual Nuclear Norm Low-rank Representation and Self-representation Induced Classifier.<br>
+		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b)></i>, pp. 920-924, 2018.  <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8803154" target="_blank">paper</a> ]
+                        </p></li>
+	                <li><p>
+   		Jielin Jiang, Yan Cui, Yadang Chen, Guangwei Gao.<br>
+		A Novel Nonlocal Low Rank Technique for Fabric Defect Detection.<br>
+		<i>International Conference on Cloud Computing and Security (<b>ICCCS</b>)</i>, pp. 173-182, 2018.  <br>
+		[ <a href="https://link.springer.com/chapter/10.1007/978-3-030-00015-8_15" target="_blank">paper</a> ]
+                        </p></li>
+	               <li><p>
+   		Yufeng Qiu, Songsong Wu, Kun Wang, Guangwei Gao, Xiao-Yuan Jing.<br>
+		Joint Subspace and Dictionary Learning with Dynamic Training Set for Cross Domain Image Classification.<br>
+		<i>International Conference on Intelligent Science and Big Data Engineering (<b>IScIDE</b>)</i>, pp. 502-517, 2018.  <br>
+		[ <a href="https://link.springer.com/chapter/10.1007/978-3-030-02698-1_44" target="_blank">paper</a> ]
+                        </p></li>	
+        </ol>
+    </div>
+	
+	
+	
 
 				
             <!-- 2019 -->
