--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,7 @@
 			<li><p>
                 Pu Huang, Tao Li, <b>Guangwei Gao</b>, Geng Yang.<br>
 		Feature extraction based on graph discriminant embedding and its applications to face recognition.<br> 
-		<i>oft Computing</i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
+		<i>Soft Computing</i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
             	[ <a href="https://link.springer.com/article/10.1007/s00500-018-3340-5" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
@@ -215,7 +215,7 @@
 			<li><p>
                 Xiaoke Zhu, Xiao-Yuan Jing, Liang Yang, Xinge You, Dan Chen, Guangwei Gao, Yunhong Wang.<br>
 		Semi-Supervised Cross-View Projection-Based Dictionary Learning for Video-Based Person Re-Identification.<br> 
-		<iIEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>)</i>, 28(10): 2599-2611, 2018. (JCR Q1, CCF B) <br>
+		<i>IEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>)</i>, 28(10): 2599-2611, 2018. (JCR Q1, CCF B) <br>
             	[ <a href="https://ieeexplore.ieee.org/document/7954687" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
@@ -284,19 +284,19 @@
                         <li><p>
    		Wenbin Yang, Quan Zhou, Yawen Fan, Guangwei Gao, Songsong Wu, Weihua Ou, Huimin Lu, Jie Cheng, Longin Jan Latecki.<br>
 		Deep Context Convolutional Neural Networks for Semantic Segmentation.<br>
-		<i>CCF Chinese Conference on Computer Vision (<b>CCCV</b>)></i>, pp. 696-704, 2017. <br>
+		<i>CCF Chinese Conference on Computer Vision (<b>CCCV</b>)</i>, pp. 696-704, 2017. <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-981-10-7299-4_58" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
    		Guangwei Gao, Huijuan Pang, Cailing Wang, Zuoyong Li, Dong Yue.<br>
 		Locality-Constrained Iterative Matrix Regression for Robust Face Hallucination.<br>
-		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)></i>, pp. 613-621, 2017. (CCF C) <br>
+		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 613-621, 2017. (CCF C) <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-319-70090-8_62" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
    		Cailing Wang, Yechao Xu, Guangwei Gao, Song Tang, Xiao-Yuan Jing.<br>
 		A Method of Pedestrian Re-identification Based on Multiple Saliency Features.<br>
-		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)></i>, pp. 712-721, 2017. (CCF C) <br>
+		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 712-721, 2017. (CCF C) <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-319-70136-3_75" target="_blank">paper</a> ]
                         </p></li>
 	               <li><p>
@@ -310,9 +310,110 @@
 	
 	
 	
+		 <div>
+        <h2><hr><a name="2016"></a>2016</h2>
+        <ol>
+	               <li><p>
+                Guangwei Gao, Xiao-Yuan Jing, Pu Huang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
+		 Locality-Constrained Double Low-Rank Representation for Effective Face Hallucination.<br>
+		<i><b>IEEE Access</b></i>,  4: 8775-8786, 2016. (JCR Q1) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/7762113" target="_blank">paper</a> ]           			
+                       </p></li>
+		       <li><p>
+               Pu Huang, Zhihui Lai, Guangwei Gao, Geng Yang, Zhangjing Yang.<br>
+	       Adaptive linear discriminant regression classification for face recognition.<br>
+	       <i>Digital Signal Processing (<b>DSP</b>)</i>, 55: 78-84, 2016. (JCR Q1)  <br>
+	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S105120041630029X" target="_blank">paper</a> ]  		  
+                       </p></li>	
+			<li><p>
+		Guoxing Wu, Wenjie Lu, Guangwei Gao, Chunxia Zhao, Jiayin Liu.<br> 
+		 Regional deep learning model for visual tracking.<br>
+		<i><b>Neurocomputing</b></i>,  175: 310-323, 2016. (JCR Q1) <br>
+      		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231215015234" target="_blank">paper</a> ]           			
+                        </p></li>	
+	  		<li><p>
+                Pu Huang, Guangwei Gao.<br>
+		Parameterless reconstructive discriminant analysis for feature extraction.<br>
+		<i><b>Neurocomputing</b></i>, 190: 50-59, 2016. (JCR Q1)  <br>
+                [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231216000473" target="_blank">paper</a> ]           			
+                        </p></li>	
+			<li><p>
+                Xiang Zhou, Fumin Shen, Yang Yang, Guangwei Gao, Yuan Wang.<br>
+		Binary code learning via optimal class representations.<br> 
+		<i><b>Neurocomputing</b></i>,  208: 59-65, 2016.  (JCR Q1)  <br>
+            	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523121630488X" target="_blank">paper</a> ]           			
+                       </p></li>	
+                        <li><p>
+   		Guangwei Gao, Xiao-Yuan Jing, Quan Zhou, Songsong Wu, Dong Yue.<br>
+		Locality-constrained matrix regression for position-patch based face hallucination.<br>
+		<i>International Conference on Image Processing (<b>ICIP</b>)></i>, pp. 419-423, 2016. <br>
+		[ <a href="https://ieeexplore.ieee.org/document/7532391/" target="_blank">paper</a> ]
+                        </p></li>
+		        <li><p>
+   		Yuming Hu, Quan Zhou, Guangwei Gao, Zhijun Yao, Weihua Ou, Longin Jan Latecki.<br>
+		Robust background exclusion for salient object detection.<br>
+		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. <br>
+		[ <a href="https://ieeexplore.ieee.org/document/7752540" target="_blank">paper</a> ]
+                        </p></li>
+	                <li><p>
+   		Huijuan Pang, Guangwei Gao*, Xiao-Yuan Jing, Songsong Wu.<br>
+		Kernel locality-constrained adaptive iterative neighbor embedding for face hallucination.<br>
+		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. (CCF C) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/7752628/" target="_blank">paper</a> ]
+                        </p></li>
+        </ol>
+    </div>
+	
+	
+		 <div>
+        <h2><hr><a name="2015"></a>2015 and before</h2>
+        <ol>
+	               <li><p>
+                Guangwei Gao, Jian Yang, Songsong Wu, Xiao-Yuan Jing, Dong Yue.<br> 
+		Bayesian sample steered discriminative regression for biometric image classification.<br>
+		 <i>Applied Soft Computing (<b>ASOC</b>)</i>,  37: 48-59, 2015. (JCR Q1)  <br>
+		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1568494615004743" target="_blank">paper</a> ]           			
+                       </p></li>
+		       <li><p>
+               Guangwei Gao, Jian Yang.<br>
+	       A novel sparse representation based framework for face image super-resolution.<br>
+	       <i><b>Neurocomputing</b></i>, 134: 92-99, 2014. (JCR Q1)  <br>
+	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231213007248" target="_blank">paper</a> ]  		  
+                       </p></li>	
+			<li><p>
+		Guangwei Gao, Jian Yang, Jianjun Qian, Lin Zhang.<br> 
+		 Integration of multiple orientation and texture information for finger-knuckle-print verification.<br>
+		<i><b>Neurocomputing</b></i>,  135: 180-191, 2014. (JCR Q1) <br>
+      		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523121400054X" target="_blank">paper</a> ]           			
+                        </p></li>	
+	  		<li><p>
+                Jianjun Qian, Jian Yang, Guangwei Gao.<br>
+		Discriminative histograms of local dominant orientation (D-HLDO) for biometric image feature extraction.<br>
+		<i>Pattern Recognition  (<b>PR</b>)></i>, 46(10): 2724-2739, 2013. (JCR Q1, CCF B)  <br>
+                [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320313001167" target="_blank">paper</a> ]           			
+                        </p></li>	
+			<li><p>
+                Guangwei Gao, Lei Zhang, Jian Yang, Lin Zhang, David Zhang.<br>
+		Reconstruction Based Finger-Knuckle-Print Verification With Score Level Adaptive Binary Fusion.<br> 
+		<i>IEEE Transactions Image Processing (<b>TIP</b>)></i>, 22(12): 5050-5062, 2013. (JCR Q1, CCF A)   <br>
+            	[ <a href="https://ieeexplore.ieee.org/document/6595604" target="_blank">paper</a> ]           			
+                       </p></li>	
+                        <li><p>
+   		Guangwei Gao, Jian Yang.<br>
+		Weight Competitive Coding for Finger-Knuckle-Print Verification.<br>
+		<i><b>ICIP</b></i>, pp. 185-192, 2013. <br>
+		[ paper]
+                        </p></li>
+		        <li><p>
+   		Guangwei Gao, Jian Yang.<br>
+		Sparse Representation Based Face Image Super-Resolution.<br>
+		<i><b>IScIDE</b></i>, pp. 303-308, 2011. <br>
+		[ paper]
+                        </p></li>
+        </ol>
+    </div>
+	
 
-				
-            <!-- 2019 -->
 
   
 
