--- a/publications.html
+++ b/publications.html
@@ -189,55 +189,55 @@
         <h2><hr><a name="2018"></a>2018</h2>
         <ol>
 	               <li><p>
-                Guangwei Gao, Zangyi Hu, Pu Huang, Meng Yang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
+                <b>Guangwei Gao</b>, Zangyi Hu, Pu Huang, Meng Yang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
 		Robust low-resolution face recognition via low-rank representation and locality-constrained regression.<br>
 		<i>Computers & Electrical Engineering (<b>CAEE</b>)</i>, 70: 968-977, 2018. (JCR Q1) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045790617323716" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Pu Huang, Tao Li, Guangwei Gao, Yazhou Yao, Geng Yang.<br>
+               Pu Huang, Tao Li, <b>Guangwei Gao</b>, Yazhou Yao, Geng Yang.<br>
 	       Collaborative representation based local discriminant projection for feature extraction.<br>
 	       <i>Digital Signal Processing (<b>DSP</b>)</i>, 76: 84-93, 2018. (JCR Q1) <br>
 	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1051200418300538" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		Pu Huang, Tao Li, Zhenqiu Shu, Guangwei Gao, Geng Yang, Chengshan Qian.<br> 
+		Pu Huang, Tao Li, Zhenqiu Shu, <b>Guangwei Gao</b>, Geng Yang, Chengshan Qian.<br> 
 		  Locality-regularized linear regression discriminant analysis for feature extraction.<br>
 		<i>Information Sciences (<b>IS</b>)</i>, 429: 164-176, 2018. (JCR Q1, CCF B) <br>
       		[ <a href="https://www.sciencedirect.com/science/article/pii/S0020025516308106" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Fei Wu, Xiao-Yuan Jing, Songsong Wu, Guangwei Gao, Qi Ge, Ruchuan Wang.<br>
+                Fei Wu, Xiao-Yuan Jing, Songsong Wu, <b>Guangwei Gao</b>, Qi Ge, Ruchuan Wang.<br>
 		"Like charges repulsion and opposite charges attraction" law based multilinear subspace analysis for face recognition.<br>
 		<i>Knowledge Based Systems (<b>KBS</b>)</i>, 149: 76-87, 2018. (JCR Q1)<br>
                 [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S095070511830090X" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Xiaoke Zhu, Xiao-Yuan Jing, Liang Yang, Xinge You, Dan Chen, Guangwei Gao, Yunhong Wang.<br>
+                Xiaoke Zhu, Xiao-Yuan Jing, Liang Yang, Xinge You, Dan Chen, <b>Guangwei Gao</b>, Yunhong Wang.<br>
 		Semi-Supervised Cross-View Projection-Based Dictionary Learning for Video-Based Person Re-Identification.<br> 
 		<i>IEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>)</i>, 28(10): 2599-2611, 2018. (JCR Q1, CCF B) <br>
             	[ <a href="https://ieeexplore.ieee.org/document/7954687" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
-   		Zhiqiang Lu, Songsong Wu, Yurong Liu, Guangwei Gao, Fei Wu.<br>
+   		Zhiqiang Lu, Songsong Wu, Yurong Liu, <b>Guangwei Gao</b>, Fei Wu.<br>
 		Diverse and Common Multi-View Subspace Clustering.<br>
 		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)></i>, pp. 878-882, 2018. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8691368" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
-   		Zangyi Hu, Guangwei Gao* , Hao Gao, Songsong Wu, Dong Zhu, Dong Yue.<br>
+   		Zangyi Hu, <b>Guangwei Gao</b>* , Hao Gao, Songsong Wu, Dong Zhu, Dong Yue.<br>
 		Robust Face Recognition Via Dual Nuclear Norm Low-rank Representation and Self-representation Induced Classifier.<br>
 		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)></i>, pp. 920-924, 2018.  <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8803154" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
-   		Jielin Jiang, Yan Cui, Yadang Chen, Guangwei Gao.<br>
+   		Jielin Jiang, Yan Cui, Yadang Chen, <b>Guangwei Gao</b>.<br>
 		A Novel Nonlocal Low Rank Technique for Fabric Defect Detection.<br>
 		<i>International Conference on Cloud Computing and Security (<b>ICCCS</b>)</i>, pp. 173-182, 2018.  <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-030-00015-8_15" target="_blank">paper</a> ]
                         </p></li>
 	               <li><p>
-   		Yufeng Qiu, Songsong Wu, Kun Wang, Guangwei Gao, Xiao-Yuan Jing.<br>
+   		Yufeng Qiu, Songsong Wu, Kun Wang, <b>Guangwei Gao</b>, Xiao-Yuan Jing.<br>
 		Joint Subspace and Dictionary Learning with Dynamic Training Set for Cross Domain Image Classification.<br>
 		<i>International Conference on Intelligent Science and Big Data Engineering (<b>IScIDE</b>)</i>, pp. 502-517, 2018.  <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-030-02698-1_44" target="_blank">paper</a> ]
@@ -252,55 +252,55 @@
         <h2><hr><a name="2017"></a>2017</h2>
         <ol>
 	               <li><p>
-                Pu Huang, Guangwei Gao, Chengshan Qian, Geng Yang, Zhangjing Yang.<br> 
+                Pu Huang, <b>Guangwei Gao</b>, Chengshan Qian, Geng Yang, Zhangjing Yang.<br> 
 		Fuzzy Linear Regression Discriminant Projection for Face Recognition.<br>
 		<i><b>IEEE Access</b></i>, 5: 4340-4349, 2017. (JCR Q1) <br>
 		[ <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7875109" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Guangwei Gao, Jian Yang, Zhihui Lai, Pu Huang, Jielin Jiang, Hao Gao, Dong Yue.<br>
+               <b>Guangwei Gao</b>, Jian Yang, Zhihui Lai, Pu Huang, Jielin Jiang, Hao Gao, Dong Yue.<br>
 	       Nuclear norm regularized coding with local position-patch and nonlocal similarity for face hallucination.<br>
 	       <i>Digital Signal Processing (<b>DSP</b>)</i>, 64: 107-120, 2017. (JCR Q1)  <br>
 	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1051200417300428" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		Guangwei Gao, Jian Yang, Xiao-Yuan Jing, Fumin Shen, Wankou Yang, Dong Yue.<br> 
+		<b>Guangwei Gao</b>, Jian Yang, Xiao-Yuan Jing, Fumin Shen, Wankou Yang, Dong Yue.<br> 
 		 Learning robust and discriminative low-rank representations for face recognition with occlusion.<br>
 		<i>Pattern Recognition (<b>PR</b>)</i>,  66: 129-143, 2017. (JCR Q1, CCF B) <br>
       		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320316304423" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Guangwei Gao, Pu Huang, Dong Yue, Wankou Yang.<br>
+                <b>Guangwei Gao</b>, Pu Huang, Dong Yue, Wankou Yang.<br>
 		Locality-Constrained Structral Orthogonal Procrustes Regression for Low-Resolution Face Recognition with Pose Variations.<br>
 		<i>IAPR Asian Conference on Pattern Recognition (<b>ACPR</b>)</i>, pp. 554-558, 2017.<br>
                 [ <a href="https://ieeexplore.ieee.org/document/8575883" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Kun Wang, Songsong Wu, Guangwei Gao, Quan Zhou, Xiao-Yuan Jing.<br>
+                Kun Wang, Songsong Wu, <b>Guangwei Gao</b>, Quan Zhou, Xiao-Yuan Jing.<br>
 		Learning Autoencoder of Attribute Constraint for Zero-Shot Classification.<br> 
 		<i>IAPR Asian Conference on Pattern Recognition (<b>ACPR</b>)</i>, pp. 605-610, 2017. <br>
             	[ <a href="https://ieeexplore.ieee.org/document/7954687" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
-   		Wenbin Yang, Quan Zhou, Yawen Fan, Guangwei Gao, Songsong Wu, Weihua Ou, Huimin Lu, Jie Cheng, Longin Jan Latecki.<br>
+   		Wenbin Yang, Quan Zhou, Yawen Fan, <b>Guangwei Gao</b>, Songsong Wu, Weihua Ou, Huimin Lu, Jie Cheng, Longin Jan Latecki.<br>
 		Deep Context Convolutional Neural Networks for Semantic Segmentation.<br>
 		<i>CCF Chinese Conference on Computer Vision (<b>CCCV</b>)</i>, pp. 696-704, 2017. <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-981-10-7299-4_58" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
-   		Guangwei Gao, Huijuan Pang, Cailing Wang, Zuoyong Li, Dong Yue.<br>
+   		<b>Guangwei Gao</b>, Huijuan Pang, Cailing Wang, Zuoyong Li, Dong Yue.<br>
 		Locality-Constrained Iterative Matrix Regression for Robust Face Hallucination.<br>
 		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 613-621, 2017. (CCF C) <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-319-70090-8_62" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
-   		Cailing Wang, Yechao Xu, Guangwei Gao, Song Tang, Xiao-Yuan Jing.<br>
+   		Cailing Wang, Yechao Xu, <b>Guangwei Gao</b>, Song Tang, Xiao-Yuan Jing.<br>
 		A Method of Pedestrian Re-identification Based on Multiple Saliency Features.<br>
 		<i>International Conference on Neural Information Processing (<b>ICONIP</b>)</i>, pp. 712-721, 2017. (CCF C) <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-319-70136-3_75" target="_blank">paper</a> ]
                         </p></li>
 	               <li><p>
-   		Guangwei Gao, Jian Yang, Pu Huang, Zuoyong Li, Dong Yue.<br>
+   		<b>Guangwei Gao</b>, Jian Yang, Pu Huang, Zuoyong Li, Dong Yue.<br>
 		Robust Face Hallucination via Locality-Constrained Nuclear Norm Regularized Regression.<br>
 		<i>International Conference on Intelligent Science and Big Data Engineering (<b>IScIDE</b>)</i>, pp. 249-258, 2017.  <br>
 		[ <a href="https://link.springer.com/chapter/10.1007/978-3-030-02698-1_44" target="_blank">paper</a> ]
@@ -314,49 +314,49 @@
         <h2><hr><a name="2016"></a>2016</h2>
         <ol>
 	               <li><p>
-                Guangwei Gao, Xiao-Yuan Jing, Pu Huang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
+                <b>Guangwei Gao</b>, Xiao-Yuan Jing, Pu Huang, Quan Zhou, Songsong Wu, Dong Yue.<br> 
 		 Locality-Constrained Double Low-Rank Representation for Effective Face Hallucination.<br>
 		<i><b>IEEE Access</b></i>,  4: 8775-8786, 2016. (JCR Q1) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7762113" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Pu Huang, Zhihui Lai, Guangwei Gao, Geng Yang, Zhangjing Yang.<br>
+               Pu Huang, Zhihui Lai, <b>Guangwei Gao</b>, Geng Yang, Zhangjing Yang.<br>
 	       Adaptive linear discriminant regression classification for face recognition.<br>
 	       <i>Digital Signal Processing (<b>DSP</b>)</i>, 55: 78-84, 2016. (JCR Q1)  <br>
 	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S105120041630029X" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		Guoxing Wu, Wenjie Lu, Guangwei Gao, Chunxia Zhao, Jiayin Liu.<br> 
+		Guoxing Wu, Wenjie Lu, <b>Guangwei Gao</b>, Chunxia Zhao, Jiayin Liu.<br> 
 		 Regional deep learning model for visual tracking.<br>
 		<i><b>Neurocomputing</b></i>,  175: 310-323, 2016. (JCR Q1) <br>
       		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231215015234" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Pu Huang, Guangwei Gao.<br>
+                Pu Huang, <b>Guangwei Gao</b>.<br>
 		Parameterless reconstructive discriminant analysis for feature extraction.<br>
 		<i><b>Neurocomputing</b></i>, 190: 50-59, 2016. (JCR Q1)  <br>
                 [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231216000473" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Xiang Zhou, Fumin Shen, Yang Yang, Guangwei Gao, Yuan Wang.<br>
+                Xiang Zhou, Fumin Shen, Yang Yang, <b>Guangwei Gao</b>, Yuan Wang.<br>
 		Binary code learning via optimal class representations.<br> 
 		<i><b>Neurocomputing</b></i>,  208: 59-65, 2016.  (JCR Q1)  <br>
             	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523121630488X" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
-   		Guangwei Gao, Xiao-Yuan Jing, Quan Zhou, Songsong Wu, Dong Yue.<br>
+   		<b>Guangwei Gao</b>, Xiao-Yuan Jing, Quan Zhou, Songsong Wu, Dong Yue.<br>
 		Locality-constrained matrix regression for position-patch based face hallucination.<br>
 		<i>International Conference on Image Processing (<b>ICIP</b>)></i>, pp. 419-423, 2016. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7532391/" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
-   		Yuming Hu, Quan Zhou, Guangwei Gao, Zhijun Yao, Weihua Ou, Longin Jan Latecki.<br>
+   		Yuming Hu, Quan Zhou, <b>Guangwei Gao</b>, Zhijun Yao, Weihua Ou, Longin Jan Latecki.<br>
 		Robust background exclusion for salient object detection.<br>
 		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7752540" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
-   		Huijuan Pang, Guangwei Gao*, Xiao-Yuan Jing, Songsong Wu.<br>
+   		Huijuan Pang, <b>Guangwei Gao</b>*, Xiao-Yuan Jing, Songsong Wu.<br>
 		Kernel locality-constrained adaptive iterative neighbor embedding for face hallucination.<br>
 		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. (CCF C) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7752628/" target="_blank">paper</a> ]
@@ -369,43 +369,43 @@
         <h2><hr><a name="2015"></a>2015 and before</h2>
         <ol>
 	               <li><p>
-                Guangwei Gao, Jian Yang, Songsong Wu, Xiao-Yuan Jing, Dong Yue.<br> 
+               <b>Guangwei Gao</b>, Jian Yang, Songsong Wu, Xiao-Yuan Jing, Dong Yue.<br> 
 		Bayesian sample steered discriminative regression for biometric image classification.<br>
 		 <i>Applied Soft Computing (<b>ASOC</b>)</i>,  37: 48-59, 2015. (JCR Q1)  <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S1568494615004743" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Guangwei Gao, Jian Yang.<br>
+               <b>Guangwei Gao</b>, Jian Yang.<br>
 	       A novel sparse representation based framework for face image super-resolution.<br>
 	       <i><b>Neurocomputing</b></i>, 134: 92-99, 2014. (JCR Q1)  <br>
 	       [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231213007248" target="_blank">paper</a> ]  		  
                        </p></li>	
 			<li><p>
-		Guangwei Gao, Jian Yang, Jianjun Qian, Lin Zhang.<br> 
+		<b>Guangwei Gao</b>, Jian Yang, Jianjun Qian, Lin Zhang.<br> 
 		 Integration of multiple orientation and texture information for finger-knuckle-print verification.<br>
 		<i><b>Neurocomputing</b></i>,  135: 180-191, 2014. (JCR Q1) <br>
       		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523121400054X" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Jianjun Qian, Jian Yang, Guangwei Gao.<br>
+                Jianjun Qian, Jian Yang, <b>Guangwei Gao</b>.<br>
 		Discriminative histograms of local dominant orientation (D-HLDO) for biometric image feature extraction.<br>
 		<i>Pattern Recognition  (<b>PR</b>)></i>, 46(10): 2724-2739, 2013. (JCR Q1, CCF B)  <br>
                 [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320313001167" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Guangwei Gao, Lei Zhang, Jian Yang, Lin Zhang, David Zhang.<br>
+                <b>Guangwei Gao</b>, Lei Zhang, Jian Yang, Lin Zhang, David Zhang.<br>
 		Reconstruction Based Finger-Knuckle-Print Verification With Score Level Adaptive Binary Fusion.<br> 
 		<i>IEEE Transactions Image Processing (<b>TIP</b>)></i>, 22(12): 5050-5062, 2013. (JCR Q1, CCF A)   <br>
             	[ <a href="https://ieeexplore.ieee.org/document/6595604" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
-   		Guangwei Gao, Jian Yang.<br>
+   		<b>Guangwei Gao</b>, Jian Yang.<br>
 		Weight Competitive Coding for Finger-Knuckle-Print Verification.<br>
 		<i><b>ICIP</b></i>, pp. 185-192, 2013. <br>
 		[ paper]
                         </p></li>
 		        <li><p>
-   		Guangwei Gao, Jian Yang.<br>
+   		<b>Guangwei Gao</b>, Jian Yang.<br>
 		Sparse Representation Based Face Image Super-Resolution.<br>
 		<i><b>IScIDE</b></i>, pp. 303-308, 2011. <br>
 		[ paper]
