--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,7 @@
 			<li><p>
                 Pu Huang, Tao Li, <b>Guangwei Gao</b>, Geng Yang.<br>
 		Feature extraction based on graph discriminant embedding and its applications to face recognition.<br> 
-		<i>Soft Computing</i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
+		<i><b>Soft Computing</b></i>, 23(16): 7015-7028, 2019. (JCR Q1) <br>
             	[ <a href="https://link.springer.com/article/10.1007/s00500-018-3340-5" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
@@ -346,19 +346,19 @@
                         <li><p>
    		<b>Guangwei Gao</b>, Xiao-Yuan Jing, Quan Zhou, Songsong Wu, Dong Yue.<br>
 		Locality-constrained matrix regression for position-patch based face hallucination.<br>
-		<i>International Conference on Image Processing (<b>ICIP</b>)></i>, pp. 419-423, 2016. <br>
+		<i>International Conference on Image Processing (<b>ICIP</b>)</i>, pp. 419-423, 2016. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7532391/" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
    		Yuming Hu, Quan Zhou, <b>Guangwei Gao</b>, Zhijun Yao, Weihua Ou, Longin Jan Latecki.<br>
 		Robust background exclusion for salient object detection.<br>
-		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. <br>
+		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)</i>, pp. 1-5, 2016. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7752540" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
    		Huijuan Pang, <b>Guangwei Gao</b>*, Xiao-Yuan Jing, Songsong Wu.<br>
 		Kernel locality-constrained adaptive iterative neighbor embedding for face hallucination.<br>
-		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)></i>, pp. 1-5, 2016. (CCF C) <br>
+		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)</i>, pp. 1-5, 2016. (CCF C) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7752628/" target="_blank">paper</a> ]
                         </p></li>
         </ol>
