--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
 	                <li><p>
    		Meng Yang, Wei Wen, Xing Wang, Linlin Shen, <b>Guangwei Gao</b>.<br>
 		Adaptive Convolution Local and Global Learning for Class-Level Joint Representation of Facial Recognition With a Single Sample Per Data Subject.<br>
-		<i>IEEE Transactions on Information Forensics and Security (<b>PATIFSA</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
+		<i>IEEE Transactions on Information Forensics and Security (<b>TIFS</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8957296" target="_blank">paper</a> ]
                         </p></li>
 			
@@ -221,13 +221,13 @@
                         <li><p>
    		Zhiqiang Lu, Songsong Wu, Yurong Liu, <b>Guangwei Gao</b>, Fei Wu.<br>
 		Diverse and Common Multi-View Subspace Clustering.<br>
-		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)></i>, pp. 878-882, 2018. <br>
+		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)</i>, pp. 878-882, 2018. <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8691368" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
    		Zangyi Hu, <b>Guangwei Gao</b>* , Hao Gao, Songsong Wu, Dong Zhu, Dong Yue.<br>
 		Robust Face Recognition Via Dual Nuclear Norm Low-rank Representation and Self-representation Induced Classifier.<br>
-		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)></i>, pp. 920-924, 2018.  <br>
+		<i>IEEE International Conference on Cloud Computing and Intelligence Systems (<b>CCIS</b>)</i>, pp. 920-924, 2018.  <br>
 		[ <a href="https://ieeexplore.ieee.org/document/8803154" target="_blank">paper</a> ]
                         </p></li>
 	                <li><p>
@@ -358,7 +358,7 @@
 	                <li><p>
    		Huijuan Pang, <b>Guangwei Gao</b>*, Xiao-Yuan Jing, Songsong Wu.<br>
 		Kernel locality-constrained adaptive iterative neighbor embedding for face hallucination.<br>
-		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)</i>, pp. 1-5, 2016. (CCF C) <br>
+		<i>International Conference on Wireless Communications & Signal Processing (<b>WCSP</b>)</i>, pp. 1-5, 2016.  <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7752628/" target="_blank">paper</a> ]
                         </p></li>
         </ol>
@@ -389,13 +389,13 @@
 	  		<li><p>
                 Jianjun Qian, Jian Yang, <b>Guangwei Gao</b>.<br>
 		Discriminative histograms of local dominant orientation (D-HLDO) for biometric image feature extraction.<br>
-		<i>Pattern Recognition  (<b>PR</b>)></i>, 46(10): 2724-2739, 2013. (JCR Q1, CCF B)  <br>
+		<i>Pattern Recognition  (<b>PR</b>)</i>, 46(10): 2724-2739, 2013. (JCR Q1, CCF B)  <br>
                 [ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320313001167" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
                 <b>Guangwei Gao</b>, Lei Zhang, Jian Yang, Lin Zhang, David Zhang.<br>
 		Reconstruction Based Finger-Knuckle-Print Verification With Score Level Adaptive Binary Fusion.<br> 
-		<i>IEEE Transactions Image Processing (<b>TIP</b>)></i>, 22(12): 5050-5062, 2013. (JCR Q1, CCF A)   <br>
+		<i>IEEE Transactions Image Processing (<b>TIP</b>)</i>, 22(12): 5050-5062, 2013. (JCR Q1, CCF A)   <br>
             	[ <a href="https://ieeexplore.ieee.org/document/6595604" target="_blank">paper</a> ]           			
                        </p></li>	
                         <li><p>
