--- a/publications.html
+++ b/publications.html
@@ -346,7 +346,7 @@
                         <li><p>
    		<b>Guangwei Gao</b>, Xiao-Yuan Jing, Quan Zhou, Songsong Wu, Dong Yue.<br>
 		Locality-constrained matrix regression for position-patch based face hallucination.<br>
-		<i>International Conference on Image Processing (<b>ICIP</b>)</i>, pp. 419-423, 2016. <br>
+		<i>International Conference on Image Processing (<b>ICIP</b>)</i>, pp. 419-423, 2016. (CCF C) <br>
 		[ <a href="https://ieeexplore.ieee.org/document/7532391/" target="_blank">paper</a> ]
                         </p></li>
 		        <li><p>
