--- a/recruitement.html
+++ b/recruitement.html
@@ -22,7 +22,7 @@
 	<div class="menu-item"><a href="codes.html">Codes</a></div>
 	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="awards.html">Awards</a></div>
-    <div class="menu-item"><a href="talks.html">Talks)</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
 	<div class="menu-item"><a href="members.html">Group Members</a></div>
 	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
