--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div class="menu-item"><a href="awards.html">Awards </a></div>
     <div class="menu-item"><a href="talks.html">Talks</a></div>
 	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="projects.html">Research Projects</a></div>
 	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
