--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
 	<div class="menu-item"><a href="publications.html">Publications </a></div>
 	<div class="menu-item"><a href="patents.html">Patents </a></div>
 	<div class="menu-item"><a href="service.html">Services</a></div>
-	<div class="menu-item"><a href="codes.html">Codes</a></div>
+	<!--<div class="menu-item"><a href="codes.html">Codes</a></div>-->
 	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="awards.html">Awards</a></div>
     <div class="menu-item"><a href="talks.html">Talks </a></div>
