--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Welcome to my homepage!</h1><br>
+    <h1 style="margin-top: 0em">Welcome to The Visual Information Processing Lab (VIPLab) of NUPT !</h1><br>
   <!--  <p>[ <a href="#news">News</a>,
         <a href="#interest">Research Interests</a>,
         <a href="#job">Job Experience</a>,
