--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
 	<div class="menu-item"><a href="members.html">Group Members</a></div>
 	<div class="menu-item"><a href="projects.html">Research Projects</a></div>
 	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
+	<div class="menu-item"><a href="call4papers.html">Call for Papers</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
