--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@ My research interests lie in machine learning, data mining, and learning-based v
     <!-- <img src="arc-beta.jpg" alt="Australian Research Council" />
     <img src="logo-gbca-beta.jpg" alt="Global Business College of Australia" /> -->
     <img src="img/JSED.png" alt="JSED" />
-	<img src="CPSF.png" alt="CPSF" />
-	<img src="NJUPT.png" alt="NJUPT" />
-	<img src="kxjst.png" alt="kxjst" />
+	<img src="img/CPSF.png" alt="CPSF" />
+	<img src="img/NJUPT.png" alt="NJUPT" />
+	<img src="img/kxjst.png" alt="kxjst" />
     </div>
 <script src="//t1.extreme-dm.com/f.js" id="eXF-bhan-0" async defer></script>
 <!--Theme from <a href="https://www.cc.gatech.edu/~lsong/" target="_blank">Prof. Le Song</a>-->
