--- a/call4papers.html
+++ b/call4papers.html
@@ -525,15 +525,16 @@ header, .context-menu, .megamenu-content, footer{
 <body class='typora-export' >
 <div  id='write'  class = ''><p><img src="TMM_masthead.png" referrerpolicy="no-referrer" alt="TMM_masthead"></p><p>&nbsp;</p><h1><a name="centerfont-colorredcall-for-papers-ieee-tmmhttpssignalprocessingsocietyorgpublications-resourcesieee-transactions-multimedia-special-issuefontcenter" class="md-header-anchor"></a>
 	<center><font color=red><span>
-	Call for Papers: IEEE </span><a href='https://2021.ieeeicme.org/'><span>ICME2021</span></a><span> Special Issue</span></font></center></h1><h3><a name="ieee-transactions-on-multimedia-special-issue-on-font-colorbluelearning-from-noisy-multimedia-datafont" class="md-header-anchor"></a><span>
-	IEEE Transactions on Multimedia Special Issue on </span><font color=blue><span>Learning from Noisy Multimedia Data</span></font></h3><p>&nbsp;</p>
-	<h4><a name="summary" class="md-header-anchor"></a><span>Summary</span></h4>
+	Call for Papers: IEEE </span><a href='https://2021.ieeeicme.org/'><span>ICME2021</span></a><span> Special Issue</span></font></center></h1>
 	
+	<h3><a name="ieee-transactions-on-multimedia-special-issue-on-font-colorbluelearning-from-noisy-multimedia-datafont" class="md-header-anchor"></a><span>
+	IEEE International Conference on Multimedia and Expo Special Issue on </span><font color=blue><span>Advanced Representation Learning for Robust Multimedia Image Understanding</span></font></h3><p>&nbsp;</p>
+	
+	<h4><a name="summary" class="md-header-anchor"></a><span>Summary</span></h4>
 	<p><span>With the development of computing power and deep learning algorithms, we can process and apply millions or even hundreds of millions of large-scale data to train robust models. Nevertheless, constructing a million-scale dataset like ImageNet is time-consuming and labor-intensive. Fortunately, web data are rich and free resources. For arbitrary categories, the potential training data can be easily obtained from the web (e.g., search engines such as Google and Bing, Twitter, Instagram, and short video sharing applications). Moreover, with the development of the Internet, web data consist of much richer modality, such as text, audio, image, and video. It is consequently natural to leverage the large-scale yet noisy data on the web to automatically construct various types of datasets. However, there are two critical issues in the automatically collected datasets: “label noise” and “domain mismatch”. Learning directly from noisy web data tends to have poor performance.</span></p>
 	<p><span>This special issue serves as a forum for researchers all over the world to discuss their works and recent advances in learning from noisy web data. Both state-of-the-art articles, as well as comprehensive literature reviews, are welcome for submission. To provide readers of the special issue with an understanding of the most current issues in this field, we will invite one survey paper, which will undergo peer review. Papers addressing interesting real-world multimedia as well as computer vision applications are especially encouraged.</span></p><p>&nbsp;</p>
 	
 	<h4><a name="scope" class="md-header-anchor"></a><span>Scope</span></h4>
-	
 	<p><span>The special issue seeks original contributions which address the challenges in learning from noisy multimedia data. Possible topics include but are not limited to:</span></p>
 	<ul>
 		<li><span>Webly supervised visual classification, detection, segmentation, and feature learning</span></li>
@@ -555,7 +556,6 @@ header, .context-menu, .megamenu-content, footer{
 		<li><span>Publication date: </span><span>		</span><span>                    Early, 2022</span></li></ul><p>&nbsp;</p>
 	
 	<h4><a name="guest-editors" class="md-header-anchor"></a><span>Guest Editors</span></h4>
-	
 	<p><span>Jian Zhang, </span><a href='mailto:jian.zhang@uts.edu.au'><span>jian.zhang@uts.edu.au</span></a><span>, University of Technology Sydney, Australia </span><strong><span>(Lead Editor)</span></strong></p>
 	<p><span>Alan Hanjalic, </span><a href='mailto:A.Hanjalic@tudelft.nl'><span>A.Hanjalic@tudelft.nl</span></a><span>, Delft University of Technology, The Netherlands</span></p>
 	<p><span>Ramesh Jain, </span><a href='mailto:jain@ics.uci.edu' target='_blank' class='url'>jain@ics.uci.edu</a><span>, University of California - Irvine, CA, USA </span></p>
@@ -564,7 +564,6 @@ header, .context-menu, .megamenu-content, footer{
 	<p><span>Dan Zeng, </span><a href='mailto:dzeng@shu.edu.cn' target='_blank' class='url'>dzeng@shu.edu.cn</a><span>, Shanghai University, China</span></p><p>&nbsp;</p>
 	
 	<h4><a name="submission-procedure" class="md-header-anchor"></a><span>Submission Procedure</span></h4>
-	
 	<p><span>Papers should be formatted according to the IEEE Transactions on Multimedia guidelines for authors (</span><a href='http://www.signalprocessingsociety.org/tmm/tmm-author-info/' target='_blank' class='url'>http://www.signalprocessingsociety.org/tmm/tmm-author-info/</a><span>). By submitting/resubmitting your manuscript to these Transactions, you are acknowledging that you accept the rules established for publication of manuscripts, including an agreement to pay all over-length page charges, color charges, and any other charges and fees associated with the publication of the manuscript. Manuscripts (both 1-column and 2-column versions are required) should be submitted electronically through the online IEEE manuscript submission system at </span><a href='http://mc.manuscriptcentral.com/tmm-ieee' target='_blank' class='url'>http://mc.manuscriptcentral.com/tmm-ieee</a><span>. All submitted papers will go through the same review process as the regular TMM paper submissions. Referees will consider originality, significance, technical soundness, clarity of exposition, and relevance to the special issue topics above.</span></p><p>&nbsp;</p></div>
 </body>
 </html>
