--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ My research interests lie in machine learning, data mining, and learning-based v
     <!-- <img src="arc-beta.jpg" alt="Australian Research Council" />
     <img src="logo-gbca-beta.jpg" alt="Global Business College of Australia" /> -->
     <img src="img/JSED.png" alt="JSED" />
-	<img src="img/CPSF.png" alt="CPSF" />
+	<img src="img/CPSF.jpg" alt="CPSF" />
 	<img src="img/NJUPT.png" alt="NJUPT" />
 	<img src="img/kxjst.png" alt="kxjst" />
     </div>
