--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@ My research interests lie in machine learning, data mining, and learning-based v
     <img src="nsfc.jpg" alt="NSFC" />
     <!-- <img src="arc-beta.jpg" alt="Australian Research Council" />
     <img src="logo-gbca-beta.jpg" alt="Global Business College of Australia" /> -->
-    <img src="img/JSED.png" alt="JSED" />
-	<img src="img/CPSF.jpg" alt="CPSF" />
-	<img src="img/NJUPT.png" alt="NJUPT" />
-	<img src="img/kxjst.png" alt="kxjst" />
+    <img src="imgjpg/JSED.jpg" alt="JSED" />
+	<img src="imgjpg/CPSF.jpg" alt="CPSF" />
+	<img src="imgjpg/NJUPT.jpg" alt="NJUPT" />
+	<img src="imgjpg/kxjst.jpg" alt="kxjst" />
     </div>
 <script src="//t1.extreme-dm.com/f.js" id="eXF-bhan-0" async defer></script>
 <!--Theme from <a href="https://www.cc.gatech.edu/~lsong/" target="_blank">Prof. Le Song</a>-->
